syntax = "proto3";

option java_package = "com.panda.game.proto";
option java_outer_classname = "LoginPb";

package com.panda.game.proto;

// 创角
message CreateUserRq {
    string userName = 1;// 账户名
    string password= 2; // 密码
}
message CreateUserRs {
}


//登陆接口
message LoginRq {
    string userName = 1;// 账户名
    string password= 2; // 密码
}
message LoginRs {
    string ip = 1; // 登陆服务器的ip
    int32 port = 2;
}

// 登陆到gateway
message GatewayLoginRq {
    int64 userId = 1;// userId
    string yx = 2; // yx
    string channel = 3; // 渠道
}
message GatewayLoginRs {
}

// 登陆到gateway
message LogicLoginRq {
    int64 userId = 1;// userId
    string yx = 2; // yx
    string channel = 3; // 渠道
    string ip = 4;      // 登陆ip
}
message LogicLoginRs {
}

// 连接到gateway
message GatewayConnectRq {
    int64 userId = 1;// userId
}
message GatewayConnectRs {
}


